# strict/swagger.json
@@ -66,6 +66,12 @@
                                     "description": {
                                         "type": "string"
                                     },
+                                    "titre": {
+                                        "type": "string"
+                                    },
+                                    "lieu": {
+                                        "type": "string"
+                                    },
                                     "createdAt": {
                                         "properties": {
                                             "getVarDate": {
@@ -102,8 +108,14 @@
                                                 "eventId": {
                                                     "type": "number"
                                                 },
+                                                "type": {
+                                                    "type": "string"
+                                                },
                                                 "fileInfo": {
                                                     "type": "any"
+                                                },
+                                                "webUrl": {
+                                                    "type": "string"
                                                 }
                                             }
                                         }
@@ -143,6 +155,12 @@
                                     "description": {
                                         "type": "string"
                                     },
+                                    "titre": {
+                                        "type": "string"
+                                    },
+                                    "lieu": {
+                                        "type": "string"
+                                    },
                                     "createdAt": {
                                         "properties": {
                                             "getVarDate": {
@@ -179,8 +197,14 @@
                                                 "eventId": {
                                                     "type": "number"
                                                 },
+                                                "type": {
+                                                    "type": "string"
+                                                },
                                                 "fileInfo": {
                                                     "type": "any"
+                                                },
+                                                "webUrl": {
+                                                    "type": "string"
                                                 }
                                             }
                                         }
@@ -291,8 +315,14 @@
                                     "eventId": {
                                         "type": "number"
                                     },
+                                    "type": {
+                                        "type": "string"
+                                    },
                                     "fileInfo": {
                                         "type": "any"
+                                    },
+                                    "webUrl": {
+                                        "type": "string"
                                     }
                                 }
                             }
@@ -329,8 +359,52 @@
                                     "eventId": {
                                         "type": "number"
                                     },
+                                    "type": {
+                                        "type": "string"
+                                    },
                                     "fileInfo": {
                                         "type": "any"
+                                    },
+                                    "webUrl": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/media/weburl": {
+            "post": {
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "tags": [
+                    "MediaController"
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "type": "number"
+                                    },
+                                    "eventId": {
+                                        "type": "number"
+                                    },
+                                    "type": {
+                                        "type": "string"
+                                    },
+                                    "fileInfo": {
+                                        "type": "any"
+                                    },
+                                    "webUrl": {
+                                        "type": "string"
                                     }
                                 }
                             }
